[gd_scene load_steps=4 format=3 uid="uid://bbos35lnhvbn2"]

[ext_resource type="Script" uid="uid://dschlhvbm2nb2" path="res://addons/konado/editor/components/character_component/status_component.gd" id="1_dsnar"]
[ext_resource type="Texture2D" uid="uid://b7dk2ypmh0q7u" path="res://addons/konado/editor/assets/icon/icon_16.svg" id="2_ul3tl"]

[sub_resource type="ButtonGroup" id="ButtonGroup_bbkaf"]

[node name="character_component" type="BoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2
size_flags_horizontal = 3
theme_override_constants/separation = 34
script = ExtResource("1_dsnar")

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_bbkaf")
text = "预览"

[node name="statusEdit" type="LineEdit" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "状态名"

[node name="illustration_import" type="Button" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"KSButton"
text = "导入立绘"
alignment = 0

[node name="portrait" type="Button" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"KSButton"
text = "导入头像"
alignment = 0

[node name="delect" type="Button" parent="."]
layout_mode = 2
icon = ExtResource("2_ul3tl")

[connection signal="toggled" from="Button" to="." method="_on_button_toggled"]
[connection signal="editing_toggled" from="statusEdit" to="." method="_on_status_edit_editing_toggled"]
[connection signal="pressed" from="illustration_import" to="." method="_on_illustration_import_pressed"]
[connection signal="pressed" from="portrait" to="." method="_on_portrait_pressed"]
[connection signal="pressed" from="delect" to="." method="_on_delect_pressed"]
